--- a/UniDB-GOU/tasks/inpainting/options/test.yml
+++ b/UniDB-GOU/tasks/inpainting/options/test.yml
@@ -1,4 +1,4 @@
-name: goub
+name: unidb
 suffix: ~  # add suffix to saved images
 model: denoising
 distortion: inpaint
@@ -9,7 +9,7 @@ sde:
   T: 100
   schedule: cosine # linear, cosine
   eps: 0.005
-  gamma: 1e6
+  gamma: !!float 1e6
   
 degradation:
   # for super-resolution
