--- a/UniDB-GOU/tasks/sr/options/train.yml
+++ b/UniDB-GOU/tasks/sr/options/train.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: goub
+name: unidb
 use_tb_logger: true
 model: denoising
 distortion: sr
@@ -10,7 +10,7 @@ sde:
   T: 100
   schedule: cosine # linear, cosine
   eps: 0.005
-  gamma: 1e6
+  gamma: !!float 1e6
 
 degradation: # for some synthetic dataset that only have GTs
   # for super-resolution
