--- a/UniDB-GOU/tasks/sr/options/test.yml
+++ b/UniDB-GOU/tasks/sr/options/test.yml
@@ -9,7 +9,7 @@ sde:
   T: 100
   schedule: cosine # linear, cosine
   eps: 0.005
-  gamma: !!float 1e7
+  gamma_inv: !!float 1e-7 # gamma_inv = 0 implies GOUB
   
 degradation:
   # for super-resolution
