--- a/UniDB-GOU/tasks/sr/options/train.yml
+++ b/UniDB-GOU/tasks/sr/options/train.yml
@@ -10,7 +10,7 @@ sde:
   T: 100
   schedule: cosine # linear, cosine
   eps: 0.005
-  gamma: !!float 1e7
+  gamma_inv: !!float 1e-7 # gamma_inv = 0 implies GOUB
 
 degradation: # for some synthetic dataset that only have GTs
   # for super-resolution
